; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_kthread.c_kthread_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_kthread.c_kthread_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kthread_desc = type { i32, i32, i64 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"kthread_start: %s: error %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kthread_start(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.kthread_desc*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.kthread_desc*
  store %struct.kthread_desc* %6, %struct.kthread_desc** %3, align 8
  %7 = load %struct.kthread_desc*, %struct.kthread_desc** %3, align 8
  %8 = getelementptr inbounds %struct.kthread_desc, %struct.kthread_desc* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to void (i8*)*
  %11 = load %struct.kthread_desc*, %struct.kthread_desc** %3, align 8
  %12 = getelementptr inbounds %struct.kthread_desc, %struct.kthread_desc* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.kthread_desc*, %struct.kthread_desc** %3, align 8
  %15 = getelementptr inbounds %struct.kthread_desc, %struct.kthread_desc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @kthread_add(void (i8*)* %10, i32* null, i32* null, i32 %13, i32 0, i32 0, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %16)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %1
  %21 = load %struct.kthread_desc*, %struct.kthread_desc** %3, align 8
  %22 = getelementptr inbounds %struct.kthread_desc, %struct.kthread_desc* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @panic(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %23, i32 %24)
  br label %26

26:                                               ; preds = %20, %1
  ret void
}

declare dso_local i32 @kthread_add(void (i8*)*, i32*, i32*, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @panic(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
